@@ -15,7 +15,6 @@ DESIGN ISSUES
 - charge spacing moves too quickly when voltage gets close to zero due to 1/n scaling algorithm
 
 HIGH PRIORITY
-- change "Add/Remove Wires" to "Connect/Disconnect Battery"
 - Plate Charge meter is initialized to incorrect value at startup
 - Stored Energy meter is initialized to incorrect value at startup
 - move shape stuff out of Wire and into WireShapeFactory, to be consistent with all other patterns
