@@ -2,13 +2,14 @@
 
 capacitor-lab.name=Capacitor Lab
 
-addWires=Add Wires
 capacitance=Capacitance
+connectBattery=Connect Battery
 coulombs=C
 custom=custom
 dielectric=Dielectric
 dielectricCharges=Dielectric Charges
 dielectricConstant=Dielectric Constant
+disconnectBattery=Disconnect Battery
 electricField=Electric Field
 electricFieldDetector=Electric Field Detector
 electricFieldLines=Electric Field Lines
@@ -32,7 +33,6 @@ plateArea=Plate Area
 plateCharge=Plate Charge
 plateCharges=Plate Charges
 plateChargeTop=Plate Charge (top)
-removeWires=Remove Wires
 separation=Separation
 showAllCharges=Show all charges
 showExcessCharges=Show excess charges
